# repo2txt

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
npm-package/: .gitignore  .npmignore  PUBLISH.md  QUICKSTART.md  README.md  install.js  package.json
scripts/: install-electron.js  update-version.cjs
src/: App.vue  config.ts  fileTree.ts  generator.ts  index.ts  main.ts  repositoryTree.ts  style.css  types.ts  ui-web.ts  ui.ts  uiStateController.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: file_ops.rs  generator.rs  mod.rs  repository.rs
src-tauri/src/models/: config.rs  mod.rs  ui.rs
src/api/: commands.ts
src/components/: CodePreview.vue  FilePreview.vue  FileRow.vue  FileTree.vue  Modal.vue  SettingsModal.vue  StatsPanel.vue  TagInput.vue  Toolbar.vue
src/components/settings/: DynamicField.vue
src/components/ui/: UiBadge.vue  UiButton.vue  UiInput.vue  UiTabs.vue  index.ts
src/stores/: repo.ts
tests/: fileTree.test.ts  generator.test.ts
tmp/: electron-main.js
tmp/cache/vite/: last-build-production.json
web/: api.ts  app.tsx  index.html  main.tsx  styles.css
web/components/: FilePreview.tsx  FileTree.tsx  Modal.tsx  StatsPanel.tsx  Toolbar.tsx
